--- a/microservice-configuration/productos-api-dev.properties
+++ b/microservice-configuration/productos-api-dev.properties
@@ -1,4 +1,4 @@
-product.properties=Product Dev
+product.property=Product Dev
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tiendaapis?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
