--- a/microservice-configuration/productos-api-dev.properties
+++ b/microservice-configuration/productos-api-dev.properties
@@ -3,3 +3,4 @@ product.property=Product Dev
 spring.datasource.url=jdbc:mysql://localhost:3306/tiendaapis?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Edhm...
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
